[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/anim/HideLoadScreen.tres" type="Animation" id=1]
[ext_resource path="res://loading screen/Loading screen.gd" type="Script" id=2]
[ext_resource path="res://assets/font_title.tres" type="DynamicFont" id=3]

[node name="LoadingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Visual" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="Visual"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="LoadingBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -730.5
margin_top = -33.5
margin_right = 730.5
margin_bottom = 33.5
custom_fonts/font = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadTween" type="Tween" parent="."]

[node name="LoadScreenAnim" type="AnimationPlayer" parent="."]
anims/HideLoadScreen = ExtResource( 1 )
